--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,10 +21,10 @@
                     <div style="font-size: 18px; font-weight: bold;">{{ posts_count }}</div>
                     <div style="color: #666; font-size: 14px;">文章</div>
                 </div>
-                <div style="text-align: center;">
+                <!-- <div style="text-align: center;">
                     <div style="font-size: 18px; font-weight: bold;">{{ user_categories|length }}</div>
                     <div style="color: #666; font-size: 14px;">分类</div>
-                </div>
+                </div> -->
                 <div style="text-align: center;">
                     <div style="font-size: 18px; font-weight: bold;">{{ user_tags|length }}</div>
                     <div style="color: #666; font-size: 14px;">标签</div>
